# peon-relay

./: .gitignore  PRD.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: bandit.yml
peon_relay/: cesp.py  config.py  hooks.py  main.py  queue.py  registry.py
peon_relay/handlers/: __init__.py  audio.py  log.py  notification.py
systemd/: peon-relay.service
tests/: test_cesp.py  test_hooks.py  test_queue.py  test_registry.py
